2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-08  Andras Varga

	* cmodule.cc: fix: checkInternalConnections() reported error on zero-
	size gate vectors too

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-10-27  Andras Varga

        * checked in MersenneTwister.h v1.0 (15 May 2003) from Richard J.Wagner
        rjwagner@writeme.com; code is under the BSD license.
        http://www-personal.engin.umich.edu/~wagnerr/MersenneTwister.html

        * added cRNG implementations clcg32.cc/h (wraps old OMNeT++ RNG), 
        cmersennetwister.cc/h (wraps Mersenne Twister, MersenneTwister.h)
 
	* ctype.cc: added call to ev.getRNGMappingFor(mod) in cModuleType's
	create() method.

2004-10-25  Andras Varga
	
	* all files: info() and fullPath() signature change (see 
	include/ChangeLog)

2004-10-10  Andras Varga

	* csimul.cc: fix: added preliminary setting of simtime to end of 
	doOneEvent() -- this fixes bug in Tkenv "run until sim.time" function,
	and sim.time display when single-stepping (it used to display time of 
	last event, should be time of next event)

2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-09-15  Andras Varga

        * ctopo.cc: implemented 2 new extractByModuleType() functions, see
        include/ChangeLog.

        * cmodule.cc: support for zero-sized module gates. A gate vector
        is zero size right after creation, and if there's no gatesize declared 
        in NED (and there's no manual setGateSize() call) it'll remain zero
        size. A zero-sized gate vector is represented by a single gate object
        whose size() method returns zero, and cannot be connected.

2004-08-11   Andras Varga

        * cchannel.cc: added check for negative delays

2004-07-22  ------ omnetpp-3.0a6 released ------

2004-07-15   Andras Varga

        * csimul.cc: deleteNetwork(): moved flushing event queue after deleting