@@ -81,7 +81,7 @@ void cDisplayString::notify()
         case NONE: break;
         case CONNECTION: ev.displayStringChanged((cGate *)object); break;
         case MODULE: ev.displayStringChanged((cModule *)object); break;
-        case MODULE_AS_PARENT: ev.displayStringAsParentChanged((cModule *)object); break;
+        case MODULEBACKGROUND: ev.backgroundDisplayStringChanged((cModule *)object); break;
         default: assert(0); // internal error: bad role
     }
 }
