@@ -1,3 +1,9 @@
+2004-11-23  Andras Varga
+	
+	* cchannel.cc: parameter "disabled" of cSimpleChannel made to work
+
+	* cgate.cc: info() string improved
+
 2004-11-23  ------ omnetpp-3.0b1 released ------
 
 2004-11-08  Andras Varga
